# contract/UserDto/CreateCommandDto.go
@@ -1,0 +1,6 @@
+package userdto
+
+type UserCommandDto struct {
+	Name   string `json:"name" binding:"required"`
+	Family string `json:"family" binding:"required"`
+}
