# contract/UserDto/CreateaCommandDto.go
@@ -1,7 +1,0 @@
-package userdto
-
-type UserCommandDto struct {
-	ID     int    `json:"id"`
-	Name   string `json:"name"`
-	Family string `json:"family"`
-}
