# docs/swagger.json
@@ -12,9 +12,9 @@
     "host": "localhost:8000",
     "basePath": "/api/v1",
     "paths": {
-        "/user/userdetail": {
+        "/user/add": {
             "post": {
-                "description": "do ping",
+                "description": "Create a new user",
                 "consumes": [
                     "application/json"
                 ],
@@ -22,12 +22,99 @@
                     "application/json"
                 ],
                 "tags": [
-                    "example"
+                    "User"
                 ],
-                "summary": "ping example",
+                "summary": "Add new user",
                 "parameters": [
                     {
-                        "description": "send id",
+                        "description": "User information",
+                        "name": "user",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/userdto.UserCommandDto"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "$ref": "#/definitions/models.User"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/user/list": {
+            "get": {
+                "description": "Get all users",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "User"
+                ],
+                "summary": "Get user list",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "array",
+                                "items": {
+                                    "$ref": "#/definitions/models.User"
+                                }
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/user/userdetail": {
+            "post": {
+                "description": "Echo user",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "User"
+                ],
+                "summary": "Test handler",
+                "parameters": [
+                    {
+                        "description": "User information",
                         "name": "user",
                         "in": "body",
                         "required": true,
@@ -40,7 +127,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/main.UserCommandDto"
                         }
                     }
                 }
@@ -63,6 +150,38 @@
                     "type": "string"
                 },
                 "username": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.User": {
+            "type": "object",
+            "properties": {
+                "created_at": {
+                    "type": "string"
+                },
+                "family": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "name": {
+                    "type": "string"
+                }
+            }
+        },
+        "userdto.UserCommandDto": {
+            "type": "object",
+            "required": [
+                "family",
+                "name"
+            ],
+            "properties": {
+                "family": {
+                    "type": "string"
+                },
+                "name": {
                     "type": "string"
                 }
             }
